# src/app/api-svc/model/pageComment.ts
@@ -21,10 +21,10 @@ export interface PageComment {
     content?: Array<Comment>;
     number?: number;
     sort?: Sort;
+    pageable?: PageableObject;
     first?: boolean;
     last?: boolean;
     numberOfElements?: number;
-    pageable?: PageableObject;
     empty?: boolean;
 }
 
