# src/app/api-svc/model/pageSubCategory.ts
@@ -21,10 +21,10 @@ export interface PageSubCategory {
     content?: Array<SubCategory>;
     number?: number;
     sort?: Sort;
+    pageable?: PageableObject;
     first?: boolean;
     last?: boolean;
     numberOfElements?: number;
-    pageable?: PageableObject;
     empty?: boolean;
 }
 
