# src/app/api-svc/model/pageUser.ts
@@ -21,10 +21,10 @@ export interface PageUser {
     content?: Array<User>;
     number?: number;
     sort?: Sort;
+    pageable?: PageableObject;
     first?: boolean;
     last?: boolean;
     numberOfElements?: number;
-    pageable?: PageableObject;
     empty?: boolean;
 }
 
